# retro_audio_synth

./: CMakeLists.txt  README.md  makefile
src/: adsr_synth.cpp  adsr_synth.h  audio.cpp  audio.h  main.cpp  midi_tools.cpp  midi_tools.h  sample_source.h  wave_synth.cpp  wave_synth.h  wavtools.cpp  wavtools.h
